force-app/main/default/objects/Sunshine_Payment__c/Sunshine_Payment__c.object-meta.xml
<CustomObject>
    <description>This object contains data points from the IMS purchased regarding all Sunshine Act Payments</description>
    <label>Sunshine Payment</label>
    <nameField>
        <displayFormat>SP-{0000000000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sunshine Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>