force-app/main/default/objects/Sunshine_Payment__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manufacturer</label>
    <type>TextArea</type>
</CustomField>