force-app/main/default/objects/Sunshine_Payment__c/fields/Payment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Reason</label>
    <type>TextArea</type>
</CustomField>