force-app/main/default/objects/Sunshine_Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Type</label>
    <type>TextArea</type>
</CustomField>