force-app/main/default/objects/Sunshine_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Physician__c</columns>
    <columns>Amount__c</columns>
    <columns>Manufacturer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>